--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://lancer.kuenaimaku.com/">
-  <meta property="og:title" content="MSMC Mission Briefing">
-  <meta property="og:description" content="MIRRORSMOKE MERCENARY COMPANY | MISSION BRIEFING">
+  <meta property="og:title" content="Just Axeop, Mission Log">
+  <meta property="og:description" content="JUST AXIOM | MISSION LOG">
   <meta property="og:image" content="/icons/company-icon.svg">
-  <title>MSMC | MISSION BRIEFING</title>
+  <title>JUST AXIOM | COMMUNIQUE</title>
 </head>
 
 <body style="margin:0px;">
