--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://lancer.kuenaimaku.com/">
-  <meta property="og:title" content="Just Axeop, Mission Log">
+  <meta property="og:title" content="Just Axiom, Mission Log">
   <meta property="og:description" content="JUST AXIOM | MISSION LOG">
   <meta property="og:image" content="/icons/company-icon.svg">
   <title>JUST AXIOM | COMMUNIQUE</title>
